include/aml_storage.h


#define AML_SUCCESS 0
#define AML_INVALID_PARAMETER_ERROR 1
#define AML_BUFFER_SIZE_ERROR 254
#define AML_INTERNAL_ERROR 255
typedef struct aml_block_t aml_block_t;
typedef struct aml_descriptor_t aml_descriptor_t;
typedef int32_t aml_status_t;
typedef struct aml_labels_t {
  const void *labels_ptr;
  const char *const *names;
  const int32_t *values;
  uintptr_t size;
  uintptr_t count;
} aml_labels_t;
typedef uint64_t aml_data_origin_t;
typedef struct aml_array_t {
  void *ptr;
  aml_status_t (*origin)(const void *array, aml_data_origin_t *origin);
  aml_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  aml_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  aml_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  aml_status_t (*create)(const void *array, const uintptr_t *shape, uintptr_t shape_count, struct aml_array_t *new_array);
  aml_status_t (*copy)(const void *array, struct aml_array_t *new_array);
  void (*destroy)(void *array);
  aml_status_t (*move_sample)(void *array, uint64_t sample, uint64_t property_start, uint64_t property_end, const void *other_array, uint64_t other_sample);
} aml_array_t;
const char *aml_last_error(void);
aml_status_t aml_labels_position(struct aml_labels_t labels,
                                 const int32_t *values,
                                 uint64_t count,
                                 int64_t *result);
aml_status_t aml_register_data_origin(const char *name, aml_data_origin_t *origin);
aml_status_t aml_get_data_origin(aml_data_origin_t origin, char *buffer, uint64_t buffer_size);
struct aml_block_t *aml_block(struct aml_array_t data,
                              struct aml_labels_t samples,
                              const struct aml_labels_t *components,
                              uintptr_t components_count,
                              struct aml_labels_t properties);
aml_status_t aml_block_free(struct aml_block_t *block);
struct aml_block_t *aml_block_copy(const struct aml_block_t *block);
aml_status_t aml_block_labels(const struct aml_block_t *block,
                              const char *values_gradients,
                              uintptr_t axis,
                              struct aml_labels_t *labels);
aml_status_t aml_block_data(const struct aml_block_t *block,
                            const char *values_gradients,
                            struct aml_array_t *data);
aml_status_t aml_block_add_gradient(struct aml_block_t *block,
                                    const char *parameter,
                                    struct aml_array_t data,
                                    struct aml_labels_t samples,
                                    const struct aml_labels_t *components,
                                    uintptr_t components_count);
aml_status_t aml_block_gradients_list(struct aml_block_t *block,
                                      const char *const **parameters,
                                      uint64_t *count);
struct aml_descriptor_t *aml_descriptor(struct aml_labels_t sparse,
                                        struct aml_block_t **blocks,
                                        uint64_t blocks_count);
aml_status_t aml_descriptor_free(struct aml_descriptor_t *descriptor);
aml_status_t aml_descriptor_sparse_labels(const struct aml_descriptor_t *descriptor,
                                          struct aml_labels_t *labels);
aml_status_t aml_descriptor_block_by_id(const struct aml_descriptor_t *descriptor,
                                        const struct aml_block_t **block,
                                        uint64_t index);
aml_status_t aml_descriptor_block_selection(const struct aml_descriptor_t *descriptor,
                                            const struct aml_block_t **block,
                                            struct aml_labels_t selection);
aml_status_t aml_descriptor_sparse_to_properties(struct aml_descriptor_t *descriptor,
                                                 const char *const *variables,
                                                 uint64_t variables_count);
aml_status_t aml_descriptor_components_to_properties(struct aml_descriptor_t *descriptor,
                                                     const char *const *variables,
                                                     uint64_t variables_count);
aml_status_t aml_descriptor_sparse_to_samples(struct aml_descriptor_t *descriptor,
                                              const char *const *variables,
                                              uint64_t variables_count);